# mai_term02_software_engineering_course_lab

./: .gitignore  CMakeLists.txt  README.md  commands.sql  docker-compose.yml  index.yaml  other.yaml  other_main.cpp  perfomance.md  start.sh  test.sh
Docker/: docker-compose.yml  kill_docker.sh
Docker/RideService/: Dockerfile
Docker/RouteService/: Dockerfile
Docker/UserService/: Dockerfile
Docker/mariadb/mysql.conf.d/: mysqld.cnf
Docker/proxysql/: proxysql.cnf
RideService/: CMakeLists.txt  index.yaml
RideService/database/: category.cpp  category.h  database.h  ride.cpp  ride.h  route_ride.cpp  route_ride.h
RideService/web_server/: http_request_factory.h  http_web_server.h
RideService/web_server/handlers/: ride_handler.h
RouteService/: CMakeLists.txt  index.yaml
RouteService/database/: database.cpp  database.h  route.cpp  route.h
RouteService/web_server/: http_request_factory.h  http_web_server.h
RouteService/web_server/handlers/: route_handler.h
UserService/: CMakeLists.txt  data.json  helper.h  index.yaml  load_data.cpp  load_data.sh
UserService/database/: database.cpp  database.h  user.cpp  user.h
UserService/web_server/: http_request_factory.h  http_web_server.h
UserService/web_server/handlers/: user_handler.h
config/: config.cpp  config.h
database/: author.cpp  author.h  database.cpp
docs/: components.md  context.md  task.md
my_service/: Dockerfile
other_server/: Dockerfile  http_other_server.h
web_server/: http_request_factory.h  http_web_server.h
web_server/handlers/: author_handler.h  user_handler.h
